<resources>
    <string name="app_name">TravelU21</string>
    <string name="registrarme_como_hotel">Registrarme como hotel</string>
    <string name="registrarme_como_restaurante">Registrarme como restaurante</string>
    <string name="qu_tipo_de_negocio_quieres_registrar">¿Qué tipo de negocio quieres registrar?</string>
    <string name="registro_negocios">Registro negocios</string>
    <string name="breve_descripci_n_de_tu_negocio_opcional">breve descripción de tu negocio (opcional)</string>
    <string name="nombre_de_negocio_o_empresa">Nombre de negocio o empresa</string>
    <string name="ubicaci_n_f_sica_de_la_empresa">Ubicación física de la empresa</string>
    <string name="url_del_sitio_web_oficial">URL del sitio web oficial</string>
    <string name="continuar">Continuar</string>
    <string name="nombres_representante_legal">nombres (representante legal)</string>
    <string name="todo">todo</string>
    <string name="llena_los_siguientes_campos_y_podr_s_ser_parte_de_esta_comunidad">¡Llena los siguientes campos y podrás ser parte de esta comunidad!</string>
    <string name="breve_descripci_n_de_ti_opcional">breve descripción de ti (opcional)</string>
    <string name="nombres">Nombres</string>
    <string name="contrase_a">contraseña</string>
    <string name="fecha_de_nacimiento">fecha de nacimiento</string>
    <string name="correo_electr_nico">correo electrónico</string>
    <string name="registro_viajeros">Registro viajeros</string>
    <string name="piscina">Piscina</string>
    <string name="desayuno_incluido">Desayuno incluido</string>
    <string name="wifi">WiFi</string>
    <string name="n_m_ximo_de_personas">N° máximo de personas</string>
    <string name="precio_por_noche">Precio por noche</string>
    <string name="registro_restaurante">Registro Restaurante</string>
    <string name="horario_de_atenci_n">Horario de atención</string>
    <string name="n_m_ximo_de_comensales">N° máximo de comensales</string>
    <string name="tipo_de_restaurante">Tipo de restaurante</string>
    <string name="medio_de_pago">Medio de pago</string>
    <string name="restaurantes">restaurantes</string>
    <string name="ver">ver</string>
    <string name="b_squeda">Búsqueda</string>
    <string name="hoteles">hoteles</string>
    <string name="crear">Crear</string>
    <string name="presupuesto">presupuesto</string>
    <string name="configuraci_n">configuración</string>
    <string name="mis_reservas">Mis reservas</string>
    <string name="guardar">guardar</string>
    <string name="en_qu_fechas_vas_a_viajar">¿En qué fechas vas a viajar?</string>
    <string name="qu_tipo_de_turismo_prefieres">¿Qué tipo de turismo prefieres?</string>
    <string name="comida">Comida</string>
    <string name="cu_nto_vas_a_invertir_en">Cuánto vas a invertir en:</string>
    <string name="con_cu_ntas_personas_vas_a_viajar">¿Con cuántas personas vas a viajar?</string>
    <string name="cu_nto_quieres_invertir_en_tu_viaje">¿Cuánto quieres invertir en tu viaje?</string>
    <string name="a_d_nde_vas_a_viajar">¿A dónde vas a viajar?</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="ver_cuenta">Ver cuenta</string>
    <string name="gesti_n_de_reservas">Gestión de reservas</string>
    <string name="b_squeda_hotel">Búsqueda Hotel</string>
    <string name="b_squeda_restaurante">Búsqueda Restaurante</string>
    <string name="travelu2">travelu2</string>
    <string name="mis_presupuestos">mis presupuestos</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="olvidaste_tu_contrase_a_haz_click_aqu">¿Olvidaste tu contraseña? Haz click aquí.</string>
    <string name="soy_viajero">Soy viajero</string>
    <string name="soy_un_negocio">Soy un negocio</string>
    <string name="registro_hotel">Registro hotel</string>
    <string name="registrarse">Registrarse</string>
    <string name="cancelar">Cancelar</string>
    <string name="datos_de_cuenta">Datos de cuenta</string>
    <string name="filtros">Filtros</string>
    <string name="fecha_de_reserva">Fecha de reserva</string>
    <string name="nombre_de_presupuesto">Nombre de presupuesto</string>
    <string name="fecha">fecha</string>
    <string name="destino">destino</string>
    <string name="n_mero_de_personas">número de personas</string>
    <string name="medio_de_pago_aceptado">Medio de pago aceptado</string>
    <string name="reservar">reservar</string>
    <string name="agregar_a_favoritos">Agregar a favoritos</string>


</resources>
