<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hotel_registro"
    tools:context=".hotel">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/llena_los_siguientes_campos_y_podr_s_ser_parte_de_esta_comunidad"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/precio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/registodefh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="60dp"
        android:background="#FF8000"
        android:text="@string/registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/cancel3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="60dp"
        android:background="#FF8000"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/registodefh"
        app:layout_constraintTop_toBottomOf="@+id/piscina"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="433dp"
        android:layout_height="61dp"
        android:foreground="@drawable/ff8000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/bottom_bar"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/registro_hotel"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/precio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:hint="@string/precio_por_noche"
        android:inputType="number"
        android:padding="8sp"
        android:textColorHint="#ff8000"
        app:layout_constraintBottom_toTopOf="@+id/personas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/personas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="24dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:hint="@string/n_m_ximo_de_personas"
        android:inputType="number"
        android:padding="8sp"
        android:textColorHint="#ff8000"
        app:layout_constraintBottom_toTopOf="@+id/wifi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precio"
        android:autofillHints="" />

    <CheckBox
        android:id="@+id/wifi"
        android:padding="8sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="24dp"
        android:background="#FFFFFF"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/wifi"
        android:textColor="#ff8000"
        android:textColorHint="#ff8000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/desayuno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personas" />

    <CheckBox
        android:id="@+id/desayuno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="24dp"
        android:background="#FFFFFF"
        android:fontFamily="sans-serif-smallcaps"
        android:padding="8sp"
        android:text="@string/desayuno_incluido"
        android:textColor="#ff8000"
        android:textColorHint="#ff8000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/piscina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wifi" />

    <CheckBox
        android:id="@+id/piscina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="50dp"
        android:background="#FFFFFF"
        android:fontFamily="sans-serif-smallcaps"
        android:padding="8sp"
        android:text="@string/piscina"
        android:textColor="#ff8000"
        android:textColorHint="#ff8000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/registodefh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desayuno" />

</androidx.constraintlayout.widget.ConstraintLayout>