<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/negocio_registro"
    tools:context=".registron">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="433dp"
        android:layout_height="61dp"
        android:foreground="@drawable/ff8000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/bottom_bar"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/registro_negocios"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailn"
        android:padding="8sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:hint="@string/correo_electr_nico"
        android:inputType="textEmailAddress"
        android:textColorHint="#FF8000"
        app:layout_constraintBottom_toTopOf="@+id/contran"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombren"
        android:autofillHints="" />

    <EditText
        android:id="@+id/fechanacimienton"
        android:padding="8sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:hint="@string/fecha_de_nacimiento"
        android:inputType="date"
        android:textColorHint="#FF8000"
        app:layout_constraintBottom_toTopOf="@+id/empresa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contran"
        android:autofillHints="" />

    <EditText
        android:id="@+id/contran"
        android:padding="8sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textColorHint="#FF8000"
        app:layout_constraintBottom_toTopOf="@+id/fechanacimienton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailn"
        android:autofillHints="" />

    <EditText
        android:id="@+id/nombren"
        android:padding="8sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:hint="@string/nombres_representante_legal"
        android:inputType="textPersonName"
        android:textColorHint="#FF8000"
        app:layout_constraintBottom_toTopOf="@+id/emailn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="1.0"
        android:autofillHints="" />

    <EditText
        android:id="@+id/descripcionn"
        android:padding="8sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="48dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:hint="@string/breve_descripci_n_de_tu_negocio_opcional"
        android:inputType="textMultiLine"
        android:lineSpacingExtra="10sp"
        android:textColorHint="#FF8000"
        app:layout_constraintBottom_toTopOf="@+id/continuer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/url"
        android:autofillHints="" />

    <Button
        android:id="@+id/continuer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="60dp"
        android:background="#FF8000"
        android:text="@string/continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="60dp"
        android:background="#FF8000"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/continuer"
        app:layout_constraintTop_toBottomOf="@+id/descripcionn"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/empresa"
        android:padding="8sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:hint="@string/nombre_de_negocio_o_empresa"
        android:inputType="textPersonName"
        android:textColorHint="#FF8000"
        app:layout_constraintBottom_toTopOf="@+id/ubicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fechanacimienton"
        android:autofillHints="" />

    <EditText
        android:id="@+id/ubicacion"
        android:padding="8sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:hint="@string/ubicaci_n_f_sica_de_la_empresa"
        android:inputType="textPersonName"
        android:textColorHint="#FF8000"
        app:layout_constraintBottom_toTopOf="@+id/url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empresa"
        android:autofillHints="" />

    <EditText
        android:id="@+id/url"
        android:padding="8sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:hint="@string/url_del_sitio_web_oficial"
        android:inputType="textPersonName"
        android:textColorHint="#FF8000"
        app:layout_constraintBottom_toTopOf="@+id/descripcionn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ubicacion"
        android:autofillHints=""
        tools:ignore="TextFields" />

</androidx.constraintlayout.widget.ConstraintLayout>